<resources>
    <string name="app_name">CalculatorGB</string>
    <string name="erase">⌫</string>
    <string name="reset">C</string>
    <string name="divide">÷</string>
    <string name="multiply">×</string>
    <string name="plus">+</string>
    <string name="equals">=</string>
    <string name="minus">-</string>
    <string name="point">.</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="change_theme">Смена Темы</string>
    <string name="settings">Выбор Темы</string>
    <string name="switch_theme">Смена темы</string>
    <string name="button_back">Назад</string>
</resources>