<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/screen"
        style="@style/screen_style"
        android:layout_width="match_parent"
        android:layout_height="@dimen/screen_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/reset"
        style="@style/functional_buttons_style"
        android:text="@string/reset"
        app:layout_constraintEnd_toStartOf="@+id/multiply"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/screen" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/multiply"
        style="@style/functional_buttons_style"
        android:text="@string/multiply"
        app:layout_constraintEnd_toStartOf="@+id/divide"
        app:layout_constraintStart_toEndOf="@+id/reset"
        app:layout_constraintTop_toBottomOf="@+id/screen" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/divide"
        style="@style/functional_buttons_style"
        android:text="@string/divide"
        app:layout_constraintEnd_toStartOf="@+id/erase"
        app:layout_constraintStart_toEndOf="@+id/multiply"
        app:layout_constraintTop_toBottomOf="@+id/screen" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/erase"
        style="@style/functional_buttons_style"
        android:text="@string/erase"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/divide"
        app:layout_constraintTop_toBottomOf="@+id/screen" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/seven_btn"
        style="@style/btn_number_style"
        android:text="@string/seven"
        app:layout_constraintEnd_toStartOf="@+id/eight_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/eight_btn"
        style="@style/btn_number_style"
        android:text="@string/eight"
        app:layout_constraintEnd_toStartOf="@+id/nine_btn"
        app:layout_constraintStart_toEndOf="@+id/seven_btn"
        app:layout_constraintTop_toBottomOf="@+id/multiply" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nine_btn"
        style="@style/btn_number_style"
        android:text="@string/nine"
        app:layout_constraintEnd_toStartOf="@+id/minus"
        app:layout_constraintStart_toEndOf="@+id/eight_btn"
        app:layout_constraintTop_toBottomOf="@+id/divide" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/minus"
        style="@style/functional_buttons_style"
        android:text="@string/minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nine_btn"
        app:layout_constraintTop_toBottomOf="@+id/erase" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/four_btn"
        style="@style/btn_number_style"
        android:text="@string/four"
        app:layout_constraintEnd_toStartOf="@+id/five_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seven_btn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/five_btn"
        style="@style/btn_number_style"
        android:text="@string/five"
        app:layout_constraintEnd_toStartOf="@+id/six_btn"
        app:layout_constraintStart_toEndOf="@+id/four_btn"
        app:layout_constraintTop_toBottomOf="@+id/eight_btn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/six_btn"
        style="@style/btn_number_style"
        android:text="@string/six"
        app:layout_constraintEnd_toStartOf="@+id/plus"
        app:layout_constraintStart_toEndOf="@+id/five_btn"
        app:layout_constraintTop_toBottomOf="@+id/nine_btn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/plus"
        style="@style/functional_buttons_style"
        android:text="@string/plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/six_btn"
        app:layout_constraintTop_toBottomOf="@+id/minus" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/one_btn"

        style="@style/btn_number_style"
        android:text="@string/one"
        app:layout_constraintEnd_toStartOf="@+id/two_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/four_btn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/two_btn"
        style="@style/btn_number_style"
        android:text="@string/two"
        app:layout_constraintEnd_toStartOf="@+id/three_btn"
        app:layout_constraintStart_toEndOf="@+id/one_btn"
        app:layout_constraintTop_toBottomOf="@+id/five_btn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/three_btn"
        style="@style/btn_number_style"
        android:text="@string/three"
        app:layout_constraintEnd_toStartOf="@+id/equals"
        app:layout_constraintStart_toEndOf="@+id/two_btn"
        app:layout_constraintTop_toBottomOf="@+id/six_btn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/equals"
        style="@style/equals_btn_style"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_equals_btn"
        android:text="@string/equals"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/three_btn"
        app:layout_constraintTop_toBottomOf="@+id/plus" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/point"
        style="@style/zero_and_point_style"
        android:layout_width="@dimen/width_point_btn"
        android:layout_height="wrap_content"
        android:text="@string/point"
        app:layout_constraintEnd_toStartOf="@+id/zero_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/one_btn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/zero_btn"
        style="@style/zero_and_point_style"
        android:layout_width="@dimen/width_zero_btn"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        app:layout_constraintEnd_toStartOf="@+id/equals"
        app:layout_constraintStart_toEndOf="@+id/point"
        app:layout_constraintTop_toBottomOf="@+id/two_btn" />

    <Switch
        android:id="@+id/switch_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_theme"
        android:textColor="@color/white"
        android:textSize="@dimen/switch_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/zero_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>